--- a/templates/admin/error.html
+++ b/templates/admin/error.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <style>
+    <style nonce="{{ g.csp_nonce }}">
         .error-container {
             text-align: center;
             padding: 60px 20px;
