--- a/templates/admin/events_list.html
+++ b/templates/admin/events_list.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <style>
+    <style nonce="{{ g.csp_nonce }}">
         .events-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
