--- a/templates/opt_out_success.html
+++ b/templates/opt_out_success.html
@@ -4,7 +4,7 @@ endblock %} {% block css %}
     rel="stylesheet"
     href="{{ url_for('static', filename='css/opt_out.css') }}"
 />
-<style>
+<style nonce="{{ g.csp_nonce }}">
     h1 {
         color: #2e7d32;
         margin-bottom: 20px;
