change out font

--- a/static/css/brand-links.css
+++ b/static/css/brand-links.css
@@ -6,7 +6,7 @@ a {
     color: black;
     font-weight: 600; /* Semi-bold */
     text-decoration: none;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     z-index: 1;
     overflow: hidden;
 }
@@ -65,8 +65,8 @@ a.multiline:hover::after {
     clip-path: inset(0 0 0 0);
 }
 
-/* Create the masking effect with a duplicate text layer */
-a::after {
+/* Create the masking effect with a duplicate text layer - only for links with data-text */
+a[data-text]::after {
     content: attr(data-text);
     position: absolute;
     top: 0;
@@ -85,11 +85,17 @@ a::after {
     pointer-events: none;
 }
 
+/* For links without data-text, disable the ::after pseudo-element */
+a:not([data-text])::after {
+    display: none;
+}
+
 a:hover::before {
     height: 100%;
 }
 
-a:hover::after {
+/* Only apply masking effect to links with data-text */
+a[data-text]:hover::after {
     clip-path: inset(0 0 0 0);
 }
 
@@ -104,9 +110,13 @@ header a::before {
     height: 0;
 }
 
-header a::after {
+header a[data-text]::after {
     color: #00ccff;
     background-color: white;
+}
+
+header a:not([data-text])::after {
+    display: none;
 }
 
 header a:hover::before {
@@ -124,9 +134,13 @@ footer a::before {
     height: 1px;
 }
 
-footer a::after {
+footer a[data-text]::after {
     color: #00ccff;
     background-color: white;
+}
+
+footer a:not([data-text])::after {
+    display: none;
 }
 
 /* Exempt elements with no-link-style class from global link styling */
