--- a/static/css/register.css
+++ b/static/css/register.css
@@ -22,7 +22,7 @@ body {
 }
 
 .welcome-info p {
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     color: black;
     margin-bottom: 10px;
@@ -42,7 +42,7 @@ body {
 
 .form-group label {
     display: block;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     color: black;
@@ -54,7 +54,7 @@ body {
     padding: 12px 16px;
     border: 2px solid black;
     border-radius: 4px;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     background: white;
     display: block;
@@ -72,7 +72,7 @@ body {
 
 .form-help {
     display: block;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     color: #666;
     margin-top: 5px;
@@ -84,7 +84,7 @@ body {
     border: 2px solid black;
     border-radius: 4px;
     padding: 12px 24px;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 18px;
     font-weight: 500;
     color: black;
@@ -109,7 +109,7 @@ body {
 }
 
 .privacy-notice h3 {
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 18px;
     font-weight: 500;
     color: black;
@@ -117,7 +117,7 @@ body {
 }
 
 .privacy-notice p {
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
     color: #666;
     line-height: 1.4;
@@ -140,7 +140,7 @@ body {
     border-radius: 4px;
     padding: 15px;
     margin-bottom: 25px;
-    font-family: "Barlow Condensed", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     color: #cc0000;
     text-align: left;
 }
