--- a/static/styles/admin/base.css
+++ b/static/styles/admin/base.css
@@ -11,8 +11,7 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     background: #f8f9fa;
     margin: 0;
     padding: 20px;
