--- a/templates/verify_success.html
+++ b/templates/verify_success.html
@@ -16,7 +16,7 @@ hack.sv{% endblock %} {% block css %}
     }
 
     .success-title {
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 28px;
         font-weight: 500;
         color: #28a745;
@@ -30,7 +30,7 @@ hack.sv{% endblock %} {% block css %}
     }
 
     .section-title {
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 18px;
         font-weight: 500;
         color: black;
@@ -46,7 +46,7 @@ hack.sv{% endblock %} {% block css %}
         border-radius: 4px;
         padding: 15px;
         margin-bottom: 15px;
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 16px;
         color: #155724;
         text-align: center;
@@ -70,7 +70,7 @@ hack.sv{% endblock %} {% block css %}
         border: 2px solid black;
         border-radius: 4px;
         padding: 8px 16px;
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 16px;
         font-weight: 500;
         color: black;
@@ -86,7 +86,7 @@ hack.sv{% endblock %} {% block css %}
     }
 
     .next-steps h3 {
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 18px;
         font-weight: 500;
         color: black;
@@ -97,7 +97,7 @@ hack.sv{% endblock %} {% block css %}
     .next-steps ul {
         margin: 0;
         padding-left: 20px;
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 16px;
         color: black;
     }
@@ -108,7 +108,7 @@ hack.sv{% endblock %} {% block css %}
     }
 
     .help-text {
-        font-family: "Barlow Condensed", sans-serif;
+        font-family: "Nunito Sans", sans-serif;
         font-size: 14px;
         color: #666;
         line-height: 1.4;
