--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -225,6 +225,11 @@
                     <input type="checkbox" id="app-allow-anyone" />
                     Allow anyone to access this app (not just admins)
                 </label>
+
+                <label class="checkbox-label">
+                    <input type="checkbox" id="app-skip-consent" />
+                    Skip consent screen (auto-approve authorization)
+                </label>
             </div>
             <div class="modal-footer">
                 <button class="btn-secondary modal-cancel" data-modal="app-modal">Cancel</button>
